--- a/src/app/components/daily-task-list/inset-list/inset-list.component.html
+++ b/src/app/components/daily-task-list/inset-list/inset-list.component.html
@@ -21,7 +21,7 @@
   <ion-icon
     class="dtl-list-icons dtl-edit-icon"
     name="ellipsis-vertical-outline"
-    (click)="itemEditClicked()"
+    (click)="itemEditClicked(taskList())"
   ></ion-icon>
 </div>
 <div
