Wiring login and create user to new API auth endpoints

--- a/src/app/components/login/login-modal/login-modal.component.html
+++ b/src/app/components/login/login-modal/login-modal.component.html
@@ -3,9 +3,9 @@
   <ion-item class="login-item-box login-username-input">
     <ion-input
       shape="round"
-      label="Username"
+      label="Email"
       labelPlacement="floating"
-      (ionInput)="setUsername($any($event))"
+      (ionInput)="setEmail($any($event))"
     ></ion-input>
   </ion-item>
   <ion-item class="login-item-box">
