--- a/src/app/components/daily-task-list/inset-list/inset-list.component.html
+++ b/src/app/components/daily-task-list/inset-list/inset-list.component.html
@@ -25,37 +25,41 @@
   ></ion-icon>
 </div>
 <div
-  cdkDropList
-  id="{{ taskList().id }}"
-  class="dtl-list-box-drag inset-list-box"
-  *ngIf="!isCollapsed"
-  (cdkDropListDropped)="onItemDropped($event)"
-  [cdkDropListData]="taskList().listItems!"
-  [cdkDropListConnectedTo]="connectedLists"
-  [cdkDropListEnterPredicate]="allowDropPredicate"
+  class="collapsible-content"
+  [class.collapsed]="isCollapsed"
 >
   <div
-    cdkDrag
-    *ngFor="let item of taskList().listItems; index as i"
-    class="dtl-list-box inset-list-item"
-    [cdkDragData]="item"
-    (cdkDragMoved)="nestedDragDropService.dragMoved($event)"
-    (cdkDragReleased)="nestedDragDropService.dragReleased($event)"
-    id="{{ item.id }}"
+    cdkDropList
+    id="{{ taskList().id }}"
+    class="dtl-list-box-drag inset-list-box"
+    (cdkDropListDropped)="onItemDropped($event)"
+    [cdkDropListData]="taskList().listItems!"
+    [cdkDropListConnectedTo]="connectedLists"
+    [cdkDropListEnterPredicate]="allowDropPredicate"
   >
-    <div class="dtl-list-clickable-box" (click)="listItemClickedEvent(item)">
-      <ion-checkbox
-        class="dtl-list-checkbox"
-        justify="start"
-        labelPlacement="end"
-        [checked]="item.completed"
-      ></ion-checkbox>
-      <p class="dtl-item-name">{{ item.name }}</p>
+    <div
+      cdkDrag
+      *ngFor="let item of taskList().listItems; index as i"
+      class="dtl-list-box inset-list-item"
+      [cdkDragData]="item"
+      (cdkDragMoved)="nestedDragDropService.dragMoved($event)"
+      (cdkDragReleased)="nestedDragDropService.dragReleased($event)"
+      id="{{ item.id }}"
+    >
+      <div class="dtl-list-clickable-box" (click)="listItemClickedEvent(item)">
+        <ion-checkbox
+          class="dtl-list-checkbox"
+          justify="start"
+          labelPlacement="end"
+          [checked]="item.completed"
+        ></ion-checkbox>
+        <p class="dtl-item-name">{{ item.name }}</p>
+      </div>
+      <ion-icon
+        class="dtl-list-icons dtl-edit-icon"
+        name="ellipsis-vertical-outline"
+        (click)="itemEditClicked(item)"
+      ></ion-icon>
     </div>
-    <ion-icon
-      class="dtl-list-icons dtl-edit-icon"
-      name="ellipsis-vertical-outline"
-      (click)="itemEditClicked(item)"
-    ></ion-icon>
   </div>
 </div>
