Added light mode pallete and adjusting styling slightly across the app

--- a/src/app/components/login/create-account-modal/create-user-modal.component.html
+++ b/src/app/components/login/create-account-modal/create-user-modal.component.html
@@ -50,6 +50,7 @@
     }}</ion-text>
   </ng-container>
   <ion-button
+    class="login-button"
     color="primary"
     fill="solid"
     shape="round"
