--- a/src/app/components/daily-task-list/daily-task-list/daily-task-list.component.scss
+++ b/src/app/components/daily-task-list/daily-task-list/daily-task-list.component.scss
@@ -9,7 +9,7 @@
   margin-left: 2rem;
   margin-right: 2rem;
   border-radius: 8px;
-  box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
+  background: var(--ion-card-background);
 }
 
 .dtl-main-content {
