--- a/src/app/components/login/login-modal/login-modal.component.html
+++ b/src/app/components/login/login-modal/login-modal.component.html
@@ -2,7 +2,6 @@
   <h3 class="login-header">Login</h3>
   <ion-item class="login-item-box login-username-input">
     <ion-input
-      shape="round"
       label="Email"
       labelPlacement="floating"
       (ionInput)="setEmail($any($event))"
@@ -10,7 +9,6 @@
   </ion-item>
   <ion-item class="login-item-box">
     <ion-input
-      shape="round"
       label="Password"
       labelPlacement="floating"
       type="password"
@@ -18,6 +16,7 @@
     ></ion-input>
   </ion-item>
   <ion-button
+    class="login-button"
     color="primary"
     fill="solid"
     shape="round"
