--- a/src/global.scss
+++ b/src/global.scss
@@ -32,8 +32,7 @@
   max-height: 100px;
   overflow: hidden;
   text-overflow: ellipsis;
-  padding: 10px 10px 10px 10px;
-  border-bottom: solid 1px var(--ion-color-step-300);
+  border-bottom: solid 1px var(--ion-border-color);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -104,23 +103,31 @@ button.alert-button.alert-button-save {
 
 // Login modal
 
+.login-button {
+  margin-top: 30px;
+  margin-bottom: 30px
+}
+
 .login-input-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 400px;
+  width: 80%;
+  background: var(--ion-card-background);
+  border: 2px solid var(--ion-border-color);
+  border-radius: 20px;
 }
 
 .login-item-box {
   margin: 10px 10px 10px 10px;
+  border-radius: 20px;
 }
 
 .login-header {
-  padding-top: 40px;
-}
-
-.login-username-input {
-  padding-top: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .login-password-text {
