--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -281,3 +281,167 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+@media (prefers-color-scheme: light) {
+  /*
+   * Dark Colors
+   * -------------------------------------------
+   */
+
+  body {
+    --ion-color-primary: #428cff;
+    --ion-color-primary-rgb: 66, 140, 255;
+    --ion-color-primary-contrast: #ffffff;
+    --ion-color-primary-contrast-rgb: 255, 255, 255;
+    --ion-color-primary-shade: #3a7be0;
+    --ion-color-primary-tint: #5598ff;
+
+    --ion-color-secondary: #50c8ff;
+    --ion-color-secondary-rgb: 80, 200, 255;
+    --ion-color-secondary-contrast: #ffffff;
+    --ion-color-secondary-contrast-rgb: 255, 255, 255;
+    --ion-color-secondary-shade: #46b0e0;
+    --ion-color-secondary-tint: #62ceff;
+
+    --ion-color-tertiary: #6a64ff;
+    --ion-color-tertiary-rgb: 106, 100, 255;
+    --ion-color-tertiary-contrast: #ffffff;
+    --ion-color-tertiary-contrast-rgb: 255, 255, 255;
+    --ion-color-tertiary-shade: #5d58e0;
+    --ion-color-tertiary-tint: #7974ff;
+
+    --ion-color-success: #2fdf75;
+    --ion-color-success-rgb: 47, 223, 117;
+    --ion-color-success-contrast: #000000;
+    --ion-color-success-contrast-rgb: 0, 0, 0;
+    --ion-color-success-shade: #29c467;
+    --ion-color-success-tint: #44e283;
+
+    --ion-color-warning: #ffd534;
+    --ion-color-warning-rgb: 255, 213, 52;
+    --ion-color-warning-contrast: #000000;
+    --ion-color-warning-contrast-rgb: 0, 0, 0;
+    --ion-color-warning-shade: #e0bb2e;
+    --ion-color-warning-tint: #ffd948;
+
+    --ion-color-danger: #ff4961;
+    --ion-color-danger-rgb: 255, 73, 97;
+    --ion-color-danger-contrast: #ffffff;
+    --ion-color-danger-contrast-rgb: 255, 255, 255;
+    --ion-color-danger-shade: #e04055;
+    --ion-color-danger-tint: #ff5b71;
+
+    --ion-color-dark: #f4f5f8;
+    --ion-color-dark-rgb: 244, 245, 248;
+    --ion-color-dark-contrast: #000000;
+    --ion-color-dark-contrast-rgb: 0, 0, 0;
+    --ion-color-dark-shade: #d7d8da;
+    --ion-color-dark-tint: #f5f6f9;
+
+    --ion-color-medium: #989aa2;
+    --ion-color-medium-rgb: 152, 154, 162;
+    --ion-color-medium-contrast: #000000;
+    --ion-color-medium-contrast-rgb: 0, 0, 0;
+    --ion-color-medium-shade: #86888f;
+    --ion-color-medium-tint: #a2a4ab;
+
+    --ion-color-light: #222428;
+    --ion-color-light-rgb: 34, 36, 40;
+    --ion-color-light-contrast: #ffffff;
+    --ion-color-light-contrast-rgb: 255, 255, 255;
+    --ion-color-light-shade: #1e2023;
+    --ion-color-light-tint: #383a3e;
+  }
+
+  /*
+   * iOS Light Theme
+   * -------------------------------------------
+   */
+
+  .ios body {
+    --ion-background-color: #dbdbdb;
+    --ion-background-color-rgb: 219,219,219;
+
+    --ion-text-color: #000000;
+    --ion-text-color-rgb: 0,0,0;
+
+    --ion-color-step-50: #d0d0d0;
+    --ion-color-step-100: #c5c5c5;
+    --ion-color-step-150: #bababa;
+    --ion-color-step-200: #afafaf;
+    --ion-color-step-250: #a4a4a4;
+    --ion-color-step-300: #999999;
+    --ion-color-step-350: #8e8e8e;
+    --ion-color-step-400: #838383;
+    --ion-color-step-450: #787878;
+    --ion-color-step-500: #6e6e6e;
+    --ion-color-step-550: #636363;
+    --ion-color-step-600: #585858;
+    --ion-color-step-650: #4d4d4d;
+    --ion-color-step-700: #424242;
+    --ion-color-step-750: #373737;
+    --ion-color-step-800: #2c2c2c;
+    --ion-color-step-850: #212121;
+    --ion-color-step-900: #161616;
+    --ion-color-step-950: #0b0b0b;
+
+    --ion-item-background: #ffffff;
+    --ion-toolbar-background: #ffffff;
+    --ion-tab-bar-background: #ffffff;
+    --ion-card-background: #ffffff;
+    --ion-border-color: #bababa;
+  }
+
+  .ios ion-modal {
+    --ion-background-color: var(--ion-color-step-100);
+    --ion-toolbar-background: var(--ion-color-step-150);
+    --ion-toolbar-border-color: var(--ion-color-step-250);
+  }
+
+  /*
+   * Material Design Light Theme
+   * -------------------------------------------
+   */
+
+  .md body {
+    --ion-background-color: #dbdbdb;
+    --ion-background-color-rgb: 219,219,219;
+
+    --ion-text-color: #000000;
+    --ion-text-color-rgb: 0,0,0;
+
+    --ion-color-step-50: #d0d0d0;
+    --ion-color-step-100: #c5c5c5;
+    --ion-color-step-150: #bababa;
+    --ion-color-step-200: #afafaf;
+    --ion-color-step-250: #a4a4a4;
+    --ion-color-step-300: #999999;
+    --ion-color-step-350: #8e8e8e;
+    --ion-color-step-400: #838383;
+    --ion-color-step-450: #787878;
+    --ion-color-step-500: #6e6e6e;
+    --ion-color-step-550: #636363;
+    --ion-color-step-600: #585858;
+    --ion-color-step-650: #4d4d4d;
+    --ion-color-step-700: #424242;
+    --ion-color-step-750: #373737;
+    --ion-color-step-800: #2c2c2c;
+    --ion-color-step-850: #212121;
+    --ion-color-step-900: #161616;
+    --ion-color-step-950: #0b0b0b;
+
+    --ion-item-background: #ffffff;
+    --ion-toolbar-background: #ffffff;
+    --ion-tab-bar-background: #ffffff;
+    --ion-card-background: #ffffff;
+    --ion-border-color: #bababa;
+  }
+}
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
