--- a/src/app/components/login/login-modal/login-modal.component.html
+++ b/src/app/components/login/login-modal/login-modal.component.html
@@ -1,13 +1,13 @@
 <div class="login-input-box">
-  <h3 class="login-header">Login</h3>
-  <ion-item class="login-item-box login-username-input">
+  <h3 class="modal-header">Login</h3>
+  <ion-item class="input-item-box">
     <ion-input
       label="Email"
       labelPlacement="floating"
       (ionInput)="setEmail($any($event))"
     ></ion-input>
   </ion-item>
-  <ion-item class="login-item-box">
+  <ion-item class="input-item-box">
     <ion-input
       label="Password"
       labelPlacement="floating"
