--- a/src/global.scss
+++ b/src/global.scss
@@ -120,12 +120,12 @@ button.alert-button.alert-button-save {
   border-radius: 20px;
 }
 
-.login-item-box {
+.input-item-box {
   margin: 10px 10px 10px 10px;
   border-radius: 20px;
 }
 
-.login-header {
+.modal-header {
   margin-top: 30px;
   margin-bottom: 30px;
 }
