--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -218,10 +218,9 @@ $app-theme: mat.define-light-theme(
     --ion-color-step-850: #d9d9d9;
     --ion-color-step-900: #e6e6e6;
     --ion-color-step-950: #f2f2f2;
-
     --ion-item-background: #000000;
-
     --ion-card-background: #1c1c1d;
+    --ion-input-background: #1f1f1f;
   }
 
   .ios ion-modal {
@@ -265,12 +264,10 @@ $app-theme: mat.define-light-theme(
     --ion-color-step-950: #f3f3f3;
 
     --ion-item-background: #1e1e1e;
-
     --ion-toolbar-background: #1f1f1f;
-
     --ion-tab-bar-background: #1f1f1f;
-
     --ion-card-background: #1e1e1e;
+    --ion-input-background: #1f1f1f;
   }
 }
 html,
@@ -390,6 +387,7 @@ body {
     --ion-tab-bar-background: #ffffff;
     --ion-card-background: #ffffff;
     --ion-border-color: #bababa;
+    --ion-input-background: #ffffff;
   }
 
   .ios ion-modal {
@@ -435,6 +433,7 @@ body {
     --ion-tab-bar-background: #ffffff;
     --ion-card-background: #ffffff;
     --ion-border-color: #bababa;
+    --ion-input-background: #ffffff;
   }
 }
 html,
