Added logos and icons and renamed app to habitly

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,7 @@
 <ion-content>
   <div class="main-div">
-    <h3 class="welcome-header">Welcome!</h3>
+    <img src="..\..\assets/icon/habitly-full-logo.svg" alt="Habitly Light Icon" class="habitly-icon light-mode-icon" />
+    <img src="..\..\assets/icon/habitly-full-logo-dark.svg" alt="Habitly Dark Icon" class="habitly-icon dark-mode-icon" />
     <ion-button
       class="button"
       color="primary"
