--- a/src/app/components/login/create-account-modal/create-user-modal.component.scss
+++ b/src/app/components/login/create-account-modal/create-user-modal.component.scss
@@ -1,6 +1,7 @@
-:host {
+.main-div {
+  height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  min-height: 100vh;
+  justify-content: center;
 }
