Added logo to login page

--- a/src/app/components/login/login-modal/login-modal.component.html
+++ b/src/app/components/login/login-modal/login-modal.component.html
@@ -1,4 +1,9 @@
-<div class="login-input-box">
+<div class="main-div">
+  <div class="icon-div">
+    <img src="..\..\assets/icon/habitly-full-logo.svg" alt="Habitly Light Icon" class="habitly-icon light-mode-icon" />
+    <img src="..\..\assets/icon/habitly-full-logo-dark.svg" alt="Habitly Dark Icon" class="habitly-icon dark-mode-icon" />
+  </div>
+  <div class="login-input-box">
   <h3 class="modal-header">Login</h3>
   <ion-item class="input-item-box">
     <ion-input
@@ -24,4 +29,5 @@
   >
     Login
   </ion-button>
+</div>
 </div>
