--- a/src/app/components/shared/page-header/page-header.component.html
+++ b/src/app/components/shared/page-header/page-header.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="page-header">
   <ion-toolbar>
     <div class="page-header-grid-container">
       <ng-container *ngIf="!hideMenu">
