--- a/src/app/components/daily-task-list/edit-task-modal/edit-task-modal.component.html
+++ b/src/app/components/daily-task-list/edit-task-modal/edit-task-modal.component.html
@@ -18,7 +18,7 @@
         placeholder="Task Name"
         inputmode="text"
         fill="solid"
-        value="{{ listItem().name }}"
+        value="{{ task.name }}"
         (ionInput)="setName($any($event))"
       ></ion-input>
     </ion-item>
@@ -42,7 +42,7 @@
         labelPlacement="stacked"
         label="Created By"
         readonly="true"
-        value="{{ listItem().createdByUserName }}"
+        value="{{ task.createdByUserId }}"
       ></ion-input>
     </ion-item>
     <ion-button
@@ -50,7 +50,6 @@
       fill="solid"
       class="modal-button"
       id="present-new-subtask-popup"
-      *ngIf="!listItem().isChildTask"
     >
       <ion-icon slot="start" name="checkbox-outline"></ion-icon>
       Create New Subtask
@@ -61,7 +60,6 @@
       [buttons]="newSubtaskPopupButtons"
       [inputs]="newSubtaskPopupInputs"
       (didDismiss)="onNewTaskPopupDismissed($event)"
-      *ngIf="!listItem().isChildTask"
     ></ion-alert>
     <ion-button
       color="danger"
