--- a/src/app/components/daily-task-list/list-item/list-item.component.html
+++ b/src/app/components/daily-task-list/list-item/list-item.component.html
@@ -1,13 +1,13 @@
-<ng-container *ngIf="isList(listItem())">
+<!-- <ng-container *ngIf="isList(listItem())">
   <app-daily-task-list-inset-list
     [listItemId]="listItem().id"
     (listItemClicked)="onListItemClickedEvent()"
   ></app-daily-task-list-inset-list>
-</ng-container>
-<ng-container *ngIf="!isList(listItem())">
+</ng-container> -->
+<ng-container>
   <div
     cdkDrag
-    [cdkDragData]="listItem()"
+    [cdkDragData]="task"
     (cdkDragMoved)="dragMoved($event)"
     (cdkDragReleased)="dragReleased($event)"
     class="dtl-list-box"
@@ -21,7 +21,7 @@
         [checked]="isListItemCompleted()"
       >
       </ion-checkbox>
-      <p class="dtl-item-name">{{ listItem().name }}</p>
+      <p class="dtl-item-name">{{ task.name }}</p>
     </div>
     <ion-icon
       class="dtl-list-icons dtl-edit-icon"
