--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,13 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
+.ion-app-host {
+    max-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
 // Daily Task List global styles
 .dtl-list-box {
   width: 100%;
