--- a/src/app/components/login/create-account-modal/create-user-modal.component.html
+++ b/src/app/components/login/create-account-modal/create-user-modal.component.html
@@ -1,4 +1,4 @@
-<div class="main-div">
+<div class="modal-main-div">
   <div class="icon-div">
     <img src="..\..\assets/icon/habitly-full-logo.svg" alt="Habitly Light Icon" class="habitly-icon light-mode-icon" />
     <img src="..\..\assets/icon/habitly-full-logo-dark.svg" alt="Habitly Dark Icon" class="habitly-icon dark-mode-icon" />
@@ -49,14 +49,24 @@
         passwordsMustMatchText
       }}</ion-text>
     </ng-container>
-    <ion-button
-      class="login-button"
-      color="primary"
-      fill="solid"
-      shape="round"
-      (click)="signupClicked()"
-    >
-      Sign Up
-    </ion-button>
+    <div class="login-modal-button-container">
+      <ion-button
+        class="login-button"
+        color="primary"
+        fill="solid"
+        shape="round"
+        (click)="signupClicked()"
+      >
+        Sign Up
+      </ion-button>
+      <ion-button
+        color="danger"
+        fill="clear"
+        shape="round"
+        (click)="cancelClicked()"
+      >
+        Cancel
+      </ion-button>
+    </div>
   </div>
 </div>
