--- a/src/app/components/login/login-modal/login-modal.component.html
+++ b/src/app/components/login/login-modal/login-modal.component.html
@@ -1,4 +1,4 @@
-<div class="main-div">
+<div class="modal-main-div">
   <div class="icon-div">
     <img src="..\..\assets/icon/habitly-full-logo.svg" alt="Habitly Light Icon" class="habitly-icon light-mode-icon" />
     <img src="..\..\assets/icon/habitly-full-logo-dark.svg" alt="Habitly Dark Icon" class="habitly-icon dark-mode-icon" />
@@ -20,14 +20,41 @@
       (ionInput)="setPassword($any($event))"
     ></ion-input>
   </ion-item>
-  <ion-button
-    class="login-button"
-    color="primary"
-    fill="solid"
-    shape="round"
-    (click)="loginClicked()"
-  >
-    Login
-  </ion-button>
+  <ng-container *ngIf="shouldShowEmailValueText">
+    <ion-text color="danger" class="login-password-text">{{
+      usernameValueText
+    }}</ion-text>
+  </ng-container>
+  <ng-container *ngIf="shouldShowPasswordValueText">
+    <ion-text color="danger" class="login-password-text">{{
+      passwordValueText
+    }}</ion-text>
+  </ng-container>
+  <div class="login-modal-action-container">
+    <div *ngIf="loading">
+      <ion-spinner name="circular"></ion-spinner>
+    </div>
+    <div *ngIf="!loading">
+      <div class="login-modal-button-container">
+        <ion-button
+          class="login-button"
+          color="primary"
+          fill="solid"
+          shape="round"
+          (click)="loginClicked()"
+        >
+          Login
+        </ion-button>
+        <ion-button
+          color="danger"
+          fill="clear"
+          shape="round"
+          (click)="cancelClicked()"
+        >
+          Cancel
+        </ion-button>
+      </div>
+    </div>
+  </div>
 </div>
 </div>
