--- a/src/app/components/daily-task-list/new-task-modal/new-task-modal.component.scss
+++ b/src/app/components/daily-task-list/new-task-modal/new-task-modal.component.scss
@@ -41,3 +41,10 @@
 .title-box {
     margin-top: 30px;
 }
+
+.priority-select-box {
+    width: 80%;
+    max-width: 400px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
