--- a/src/global.scss
+++ b/src/global.scss
@@ -127,12 +127,12 @@ button.alert-button.alert-button-save {
 }
 
 .modal-main-div {
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: start;
-  margin-top: 10vh;
+  padding-top: 10vh;
 }
 
 .login-input-box {
