Added priority chip to DTL item and refresh on new task creation

--- a/src/app/components/daily-task-list/list-item/list-item.component.html
+++ b/src/app/components/daily-task-list/list-item/list-item.component.html
@@ -23,6 +23,7 @@
       </ion-checkbox>
       <p class="dtl-item-name">{{ task.name }}</p>
     </div>
+    <dtl-chip [priority]="task.priority"></dtl-chip>
     <ion-icon
       class="dtl-list-icons dtl-edit-icon"
       name="ellipsis-vertical-outline"
