--- a/src/app/components/daily-task-list/new-task-modal/new-task-modal.component.html
+++ b/src/app/components/daily-task-list/new-task-modal/new-task-modal.component.html
@@ -16,6 +16,7 @@
         label="Priority"
         labelPlacement="floating"
         placeholder="Select Priority"
+        shape="round"
         [(ngModel)]="newTaskPriority"
       >
         <ion-select-option value="0">Low</ion-select-option>
