--- a/src/app/components/daily-task-list/list-item/list-item.component.html
+++ b/src/app/components/daily-task-list/list-item/list-item.component.html
@@ -12,8 +12,10 @@
     (cdkDragReleased)="dragReleased($event)"
     class="dtl-list-box"
     #listItemContainer
+    (click)="onListItemClickedEvent()"
+    [class.completed]="isListItemCompleted()"
   >
-    <div class="dtl-list-clickable-box" (click)="onListItemClickedEvent()">
+    <div class="dtl-list-clickable-box">
       <ion-checkbox
         class="dtl-list-checkbox"
         justify="start"
@@ -21,9 +23,9 @@
         [checked]="isListItemCompleted()"
       >
       </ion-checkbox>
-      <p class="dtl-item-name">{{ task.name }}</p>
+      <p class="dtl-item-name" [class.completed]="isListItemCompleted()">{{ task.name }}</p>
     </div>
-    <dtl-chip [priority]="task.priority"></dtl-chip>
+    <dtl-chip [priority]="task.priority" [completed]="task.completed"></dtl-chip>
     <ion-icon
       class="dtl-list-icons dtl-edit-icon"
       name="ellipsis-vertical-outline"
