--- a/src/app/components/daily-task-list/list-item/list-item.component.scss
+++ b/src/app/components/daily-task-list/list-item/list-item.component.scss
@@ -4,3 +4,12 @@
   padding-top: 10px;
   padding-bottom: 10px;
 }
+
+.dtl-item-name.completed {
+  text-decoration: line-through;
+  opacity: 0.6;
+}
+
+.dtl-list-box.completed {
+  color: var(--ion-color-medium-contrast);
+}
