--- a/src/app/components/shared/chip/dtl-chip.component.html
+++ b/src/app/components/shared/chip/dtl-chip.component.html
@@ -1,3 +1,3 @@
-<div class="dtl-item-chip" [ngClass]="priorityClass[priority]">
+<div class="dtl-item-chip" [ngClass]="priorityClass[priority]" [class.completed]="completed">
   {{ priorityLabels[priority] }}
 </div>
