--- a/src/app/components/shared/chip/dtl-chip.component.scss
+++ b/src/app/components/shared/chip/dtl-chip.component.scss
@@ -8,18 +8,27 @@
   align-items: center;
   justify-content: center;
   border-radius: 20px;
-  color: var(--ion-text-color);
 
   &.low {
-    background-color: var(--ion-color-success);
-  }
-  &.medium {
+    color: var(--ion-color-primary-contrast);
     background-color: var(--ion-color-primary);
   }
+  &.medium {
+    color: var(--ion-color-tertiary-contrast);
+    background-color: var(--ion-color-tertiary);
+  }
   &.high {
+    color: var(--ion-color-warning-contrast);
     background-color: var(--ion-color-warning);
   }
   &.urgent {
+    color: var(--ion-color-danger-contrast);
     background-color: var(--ion-color-danger);
   }
+}
+
+.dtl-item-chip.completed {
+  opacity: 0.6;
+  color: var(--ion-color-light);
+  background: var(--ion-color-light-contrast);
 }
