Refactoring chip to only display on urgent tasks

--- a/src/app/components/shared/chip/dtl-chip.component.scss
+++ b/src/app/components/shared/chip/dtl-chip.component.scss
@@ -19,7 +19,7 @@
   }
   &.high {
     color: var(--ion-color-warning-contrast);
-    background-color: var(--ion-color-warning);
+    background-color: var(--ion-color-warning-shade);
   }
   &.urgent {
     color: var(--ion-color-danger-contrast);
