--- a/src/app/components/daily-task-list/list-item/list-item.component.html
+++ b/src/app/components/daily-task-list/list-item/list-item.component.html
@@ -21,11 +21,14 @@
         justify="start"
         labelPlacement="end"
         [checked]="isListItemCompleted()"
+        [disabled]="isListItemCompleted()"
       >
       </ion-checkbox>
       <p class="dtl-item-name" [class.completed]="isListItemCompleted()">{{ task.name }}</p>
     </div>
-    <dtl-chip [priority]="task.priority" [completed]="task.completed"></dtl-chip>
+    <div *ngIf="shouldShowPriorityChip()">
+      <dtl-chip [priority]="task.priority" [completed]="task.completed"></dtl-chip>
+    </div>
     <ion-icon
       class="dtl-list-icons dtl-edit-icon"
       name="ellipsis-vertical-outline"
