--- a/src/app/components/daily-task-list/edit-task-modal/edit-task-modal.component.scss
+++ b/src/app/components/daily-task-list/edit-task-modal/edit-task-modal.component.scss
@@ -1,8 +1,3 @@
-ion-alert {
-  --backdrop-opacity: 0.8;
-  --background: var(--ion-card-background);
-}
-
 .content-box {
   display: flex;
   flex-direction: column;
@@ -11,14 +6,67 @@ ion-alert {
   width: 100%;
 }
 
-.input-box {
-  margin: 15px 10px 10px 15px;
-  width: 80%;
-  max-width: 400px;
-}
-
 .modal-button {
   margin: 15px 10px 10px 15px;
   width: 65%;
   max-width: 300px;
+}
+
+.input-box {
+    width: 80%;
+    max-width: 400px;
+}
+
+.main-div {
+    height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.controls-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 400px;
+    width: 80%;
+    background: var(--ion-card-background);
+    border: 2px solid var(--ion-border-color);
+    border-radius: 20px;
+}
+
+.button-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    width: 100%;
+}
+
+.button {
+  width: 50%;
+  max-width: 300px;
+}
+
+.title-box {
+  margin-top: 30px;
+}
+
+.priority-select-box {
+  width: 80%;
+  max-width: 400px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.delete-button-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
