--- a/src/app/components/daily-task-list/list-item/list-item.component.scss
+++ b/src/app/components/daily-task-list/list-item/list-item.component.scss
@@ -13,3 +13,9 @@
 .dtl-list-box.completed {
   color: var(--ion-color-medium-contrast);
 }
+
+.chip-box {
+  justify-self: flex-end;
+  margin-left: auto;
+  margin-right: 0;
+}
