--- a/src/app/pages/daily-task-list/daily-task-list.page.html
+++ b/src/app/pages/daily-task-list/daily-task-list.page.html
@@ -1,5 +1,5 @@
 <app-page-header [title]="title"></app-page-header>
-<app-daily-task-list [taskList]="dailyTaskList$"></app-daily-task-list>
+<app-daily-task-list [taskList]="dailyTaskList$" (refreshTaskList)="getTaskList()"></app-daily-task-list>
 <ion-fab slot="fixed" vertical="bottom" horizontal="end">
   <ion-fab-button (click)="onNewTaskClicked()">
     <ion-icon name="add-outline"></ion-icon>
