--- a/src/global.scss
+++ b/src/global.scss
@@ -74,15 +74,15 @@
   width: 100%;
 }
 
-button.alert-button.alert-button-delete {
-  background-color: var(--ion-color-danger);
-  color: var(--ion-color-danger-contrast);
-}
+// button.alert-button.alert-button-delete {
+//   background-color: var(--ion-color-danger);
+//   color: var(--ion-color-danger-contrast);
+// }
 
-button.alert-button.alert-button-save {
-  background-color: var(--ion-color-primary);
-  color: var(--ion-color-primary-contrast);
-}
+// button.alert-button.alert-button-save {
+//   background-color: var(--ion-color-primary);
+//   color: var(--ion-color-primary-contrast);
+// }
 
 // Daily Task List drag and drop
 .cdk-drag-preview {
