--- a/src/global.scss
+++ b/src/global.scss
@@ -74,16 +74,6 @@
   width: 100%;
 }
 
-// button.alert-button.alert-button-delete {
-//   background-color: var(--ion-color-danger);
-//   color: var(--ion-color-danger-contrast);
-// }
-
-// button.alert-button.alert-button-save {
-//   background-color: var(--ion-color-primary);
-//   color: var(--ion-color-primary-contrast);
-// }
-
 // Daily Task List drag and drop
 .cdk-drag-preview {
   box-sizing: border-box;
@@ -124,6 +114,10 @@
   justify-content: center;
   padding-top: 60px;
   padding-bottom: 30px
+}
+
+.toast-content {
+  text-align: center;
 }
 
 .modal-main-div {
